# arkanoid

./: .gitignore  CMakeLists.txt  LICENSE  README.md
arkanoid/: CMakeLists.txt  main.cpp
arkanoid/include/: brick.h  brick_draw.h  brick_select_test.h  functions_draw.h  functions_select_test.h  graphic_object.h  main_window.h  qrect_draw.h  qrect_select_test.h
arkanoid/src/: brick_draw.cpp  brick_select_test.cpp  main.cpp  main_window.cpp  qrect_draw.cpp  qrect_select_test.cpp
arkanoid/ui/: main_window.ui
